# protein-agent-tiny

./: .env.example  .gitignore  PARTICIPANT_GUIDE.md  README.md  pyproject.toml  requirements-agent.txt
data/problems/: 1.json  2.json  3.json
protein_agent_tiny/: __init__.py  agent_runner.py  archive.py  environment.py  literature.py  memory.py  problems.py  report.py  run_suite.py  score.py  solver.py  tools.py  validate.py
protein_agent_tiny/prompts/: __init__.py  bootstrap.md  improve.md  reflect.md  skill_protein_ensemble.md
protein_agent_tiny/runtime/: agents.py  audit.py  contracts.py  iteration.py  solver_env.py  workspace.py
protein_agent_tiny/scoring/: cif.py  geometry.py  proxy.py
scripts/: _python_env.sh  bootstrap_server.sh  deploy_uv.sh  record_score.sh  run_agent.sh  run_baseline.sh
tests/: conftest.py  test_candidate_portfolio.py  test_forced_mode.py  test_iteration_acceptance.py  test_module_boundaries.py  test_scoring_cif.py  test_scoring_geometry.py  test_scoring_proxy_gate.py
tests/fixtures/: clash_violation.cif  full_backbone.cif  minimal_ca_only.cif
tests/fixtures/duplicate_ensemble/: 1_conf2_pred.cif
